resolves #4183; header alignment

--- a/src/sass/facility-locator.scss
+++ b/src/sass/facility-locator.scss
@@ -4,7 +4,7 @@
 
 .facility-locator {
   .title-section {
-    padding: 0 1.5rem;
+    padding: 0.5rem 0;
   }
 
   .flex-center {
@@ -33,7 +33,7 @@
   }
 
   .p1 {
-    padding: 1em 0;
+    padding: 0.5em 0;
   }
 
   label {
